--- a/config_example.json
+++ b/config_example.json
@@ -1,5 +1,5 @@
 {
-    "image_path": "image.jpg",
+    "image_path": "image.png",
     "image_start_coords": [741, 610],
     "legacy_transparency": true,
     "thread_delay": 2,
